RESOLVED FIXED205748
dom/nodes/Document-createElement-namespace.html WPT test is failing
https://bugs.webkit.org/show_bug.cgi?id=205748
Summary dom/nodes/Document-createElement-namespace.html WPT test is failing
Chris Dumez
Reported 2020-01-03 13:46:55 PST
dom/nodes/Document-createElement-namespace.html WPT test is failing in WebKit but passing in Blink and Gecko.
Attachments
Patch (5.54 KB, patch)
2020-01-03 13:50 PST, Chris Dumez
no flags
Patch (7.06 KB, patch)
2020-01-03 15:19 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2020-01-03 13:50:06 PST
Chris Dumez
Comment 2 2020-01-03 15:19:29 PST
Chris Dumez
Comment 3 2020-01-03 16:29:14 PST
Comment on attachment 386721 [details] Patch Clearing flags on attachment: 386721 Committed r254022: <https://trac.webkit.org/changeset/254022>
Chris Dumez
Comment 4 2020-01-03 16:29:16 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2020-01-03 16:30:26 PST
Chris Dumez
Comment 6 2020-01-29 08:20:42 PST
*** Bug 206931 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.