dom/nodes/Document-createElement-namespace.html WPT test is failing https://bugs.webkit.org/show_bug.cgi?id=205748

Reviewed by Sam Weinig.

LayoutTests/imported/w3c:

Rebaseline WPT test that is now passing.

* web-platform-tests/dom/nodes/Document-createElement-namespace-expected.txt:

Source/WebCore:

dom/nodes/Document-createElement-namespace.html WPT test was failing in WebKit but passing in Blink
and Gecko. The issue was that the MIME type passed to DOMParser.parseFromString() would always be
resolved to "application/xml", no matter which XML MIME type was provided as input (e.g. "text/xml").

No new tests, rebaselined existing test.

* dom/DOMImplementation.cpp:
(WebCore::DOMImplementation::createDocument):

LayoutTests:

Unskip test as it does not appear to be flaky locally.

* TestExpectations:

Canonical link: https://commits.webkit.org/218897@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254022 268f45cc-cd09-0410-ab3c-d52691b4dbfc